--- a/src/components/Sections/Cards/styles.module.css
+++ b/src/components/Sections/Cards/styles.module.css
@@ -1,11 +1,12 @@
-.content {
-    width: 200px;
+.content{
+    width: 100%;
+    max-width: 1450px;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.container {
-    width: 200px;
-    margin: 0 auto;
-    padding: 0 1rem;
+.content img{
+    width: 450px;   
 }
