--- a/src/pages/setorInfantil/styles.module.css
+++ b/src/pages/setorInfantil/styles.module.css
@@ -1,13 +1,6 @@
 .main {
-    background-color: rgb(0, 255, 179);
-    width: 100%;
     height: 100vh;
-}
-
-.main h1 {
+    color: rgb(255, 149, 10);
     text-align: center;
     font-style: oblique;
-    font-weight: bolder;
-    font-family: inherit;
-    font-weight: bolder;
 }
