--- a/src/pages/setorFeminina/styles.module.css
+++ b/src/pages/setorFeminina/styles.module.css
@@ -1,6 +1,6 @@
 .main {
-    text-align: center;
-    font-weight: bolder;
-    color: rgb(255, 149, 10);
+    height: 100vh;
     font-style: oblique;
+    text-align: center;
+    color: rgb(255, 18, 10);
 }
