--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,8 @@
- .content{
+ /* .section{
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-} 
-
-.content img{
-    width: 450px;   
-} 
+}  */
