--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,11 +1,96 @@
 .section {
     width: 100%;
-    height: 250px;
-    
+    z-index: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1rem;
+    z-index: 1;
+    color: #FFFAFA;
+    text-align: center;
+    font-style: oblique;
+    background-color: #222;
+    margin-top: 200px;
 }
 
 .rodape {
     display: flex;
-    padding: 1px 100px;
-    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+    height: 211px;
+    width: 625px;
+    margin-left: 275px;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+}
+
+.h1 {
+    height: 36px;
+    width: 105px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: auto;
+}
+
+.rodape div:nth-child(1) p {
+    font-weight: bold;
+}
+
+.horario p:nth-child(1) {
+    font-weight: 900;
+}
+
+.horario p:nth-child(2) {
+    font-weight: bold;
+}
+
+.horario p:nth-child(3) {
+    font-weight: bold;
+}
+
+.redesSociais {
+    display: flex;
+    margin-top: 27px;
+    height: 211px;
+    width: 480px;
+    align-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.h2 {
+    margin-top: 35px;
+}
+
+.links {
+    height: 10px;
+    display: flex;
+    margin: 25px 8px;
+    z-index: 0;
+}
+
+.links a {
+    height: 10px;
+    margin: 25px 8px;
+    z-index: 0;
+    display: contents;
+}
+
+.whatsapp {
+    height: 35px;
+    width: 31px;
+    margin: 6px;
+    font-size: 35px;
+    color: #25d366;
+    height: 5px;
+    z-index: 100;
+}
+
+.face {
+    margin-top: 0px;
+    height: 2rem;
+    width: 2rem;
+    margin-left: 1rem;
+    font-size: 35px;
 }
