--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-image: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
+    background-color: #FFFAFA;
+    
 }
 
 .container {
@@ -12,4 +13,5 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 0 2rem;
+    background: lightgrey;
 }
