--- a/src/pages/sectionCards/Card/styles.module.css
+++ b/src/pages/sectionCards/Card/styles.module.css
@@ -21,24 +21,17 @@
     padding-bottom: 10rem;
 }
 
-    /* span {
+    span {
         font-size: 18px;
-    } */
+    } 
 
-    /* span:last-child {
+     span:last-child {
         color: #7b7b7b;
         margin-top: 0.5rem;
         font-size: 14px;
-    } */
-
-/* .content img{
-    width: 450px;   
-}
-
+    }
 .img {
     width: 346px;
     height: 374px;
     padding: 0.5rem;
-} */
-
-
+} 
