--- a/src/pages/sectionCards/Card/styles.module.css
+++ b/src/pages/sectionCards/Card/styles.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     border: 0.1rem solid #dedede;
     background-color: #ffffff;
     border-radius: 0.3rem;
@@ -34,4 +34,4 @@
     width: 346px;
     height: 374px;
     padding: 0.5rem;
-} 
+}  */
