--- a/src/pages/cadastro/styles.module.css
+++ b/src/pages/cadastro/styles.module.css
@@ -1,9 +1,16 @@
 .main {
     color: rgba(175, 142, 71, 0.788);
-    text-align: center;
-    font-style: oblique;
 }
  .section {
      margin-top: 100px;
      width: 100%;
- }
+    }
+
+ .main h1 {
+    text-align: center;
+    color: #222;
+    font-style: oblique;
+    font-weight: 800;
+    text-decoration: none;
+    font-size: 34px;
+}
