--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -12,16 +12,14 @@
     text-align: center;
     font-style: oblique;
     background-color: #222;
-    margin-top: 200px;
+    margin-top: 225px;
 }
 
 .rodape {
     display: flex;
     height: 211px;
-    width: 625px;
-    margin-left: 275px;
-    justify-content: space-evenly;
-    flex-direction: row;
+    width: 720px;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -53,14 +51,15 @@
     display: flex;
     margin-top: 27px;
     height: 211px;
-    width: 480px;
     align-content: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-right: 58px;
 }
 
 .h2 {
     margin-top: 35px;
+    text-align: end;
 }
 
 .links {
