--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -6,11 +6,11 @@
     display: flex;
     width: 100px;
     z-index: 90;
-    
+
 }
 
 .main {
-height: 406px;
+    height: 406px;
 }
 
 .main h1 {
@@ -33,7 +33,8 @@ height: 406px;
     height: 250px;
 }
 
- .card, .cadr2 {
+.card,
+.cadr2 {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
@@ -44,5 +45,5 @@ height: 406px;
     margin-top: 25px;
     text-align: center;
     justify-content: space-between;
-    flex-wrap: wrap;   
+    flex-wrap: wrap;
 }
