--- a/src/pages/setorFeminina/styles.module.css
+++ b/src/pages/setorFeminina/styles.module.css
@@ -37,7 +37,7 @@
 .card {
     width: 30%;
     text-align: center;
-    box-shadow: rgb(0 0 0 / 20%) 0px 2px 6px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 0px 2px 2px;
     border-radius: 0.9rem;
     margin-top: 30px;
 }
