--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -34,18 +34,26 @@
     margin-top: 25px;
 }
 
-.roupas {
+.roupas { 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
     padding: 0px 230px;
     font-style: oblique;
     font-weight: bold;
     margin-bottom: 0px;
-    height: 8px;
+    height: 33px;
+}
+
+.roupas input {
+    margin-left: 15px;
 }
 
 .cardsMasculina {
     max-width: 1440px;
     width: 100%;
-    margin: 0 auto;
+    margin: 15px auto;
     display: flex;
     padding: 0.1rem;
     font-size: 1.5rem;
