--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -1,20 +1,32 @@
 .container {
-
-    
     border: 0.1rem solid #dedede;
     background-color: #ffffff;
     border-radius: 0.3rem;
-    box-shadow: rgb(0 0 0 / 20%) 0px 2px 6px; 
-    width: 390px;
-    height: 390px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 2px 6px;
+    width: 23%;
+    height: 380px;
+    border-radius: 11rem;
+
 }
 
-.thumbnail {
+
+.container {
     display: flex;
-    width: 100%;
-    height: 55%;    
+    justify-content: space-between;
+    /* width: 100%; */
+    /* height: 55%;     */
     justify-content: center;
+    border-radius: 1rem;
 }
+
+.imagens p {
+    margin-top: -77px;
+    color: #fff;
+    background: #000;
+    opacity: 0.8;
+    padding-bottom: 9px;
+}
+
 
 .title{
     display: flex;
@@ -25,18 +37,3 @@
     margin-top: 38px;
     text-align: center;
 }
-
-.price{
-    display: flex;
-    flex-direction: column;
-    /* padding: 1rem; */
-    font-size: 1.5rem;
-    font-weight: bolder;
-    text-align: center;
-}
-
- .grid span {
-    font-size: 18px;
-    margin-left: 10px;
-    text-align: end;
-}  
