--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,11 +1,19 @@
 .header {
     display: flex;
-    /* justify-content: center;
-    flex-direction: column;
-    align-items: center; */
     width: 100%;
-    background-color: #222; 
-    /* position: relative; */
+    background-color: #222;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 2px;
+    flex-direction: column;
+    align-items: flex-end;
+    /* display: flex;
+    width: 100%;
+    background-color: #222;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 25px;
+    justify-content: center; */
 }
 
 .headerForm {
@@ -23,8 +31,6 @@
     text-decoration: none;
     font-style: oblique;
     font-weight: bolder;
-    margin-top: -40px;
-    margin-right: 20px;
 }
 
 .linkPrincipal a {
@@ -35,8 +41,16 @@
     font-size: 22px;
 }
 
+.navHome {
+    display: flex;
+    width: 1440px;
+    margin: 5px auto;
+    flex-direction: row;
+    padding: 0 5px;
+}
+
 .container {
     width: 1440px;
-   margin: 0 auto;
-   padding: 30px 0 40px 0;
+    margin:  auto;
+    padding: 0 25px
 }
