--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -2,11 +2,9 @@
     display: flex;
     width: 100%;
     background-color: #222;
-    max-width: 100%;
+    max-width: 1898px;
     margin: 0 auto;
     padding: 0 2px;
-    flex-direction: column;
-    align-items: flex-end;
     /* display: flex;
     width: 100%;
     background-color: #222;
@@ -14,6 +12,15 @@
     margin: 0 auto;
     padding: 0 25px;
     justify-content: center; */
+
+    /* display: flex;
+    width: 100%;
+    background-color: #222;
+    max-width: 1898px;
+    margin: 0 auto;
+    padding: 0 2px;
+    flex-direction: column;
+    align-items: flex-end; */
 }
 
 .headerForm {
@@ -43,14 +50,17 @@
 
 .navHome {
     display: flex;
-    width: 1440px;
+    width: 1350px;
     margin: 5px auto;
     flex-direction: row;
     padding: 0 5px;
+    margin-left: 181px;
 }
 
-.container {
-    width: 1440px;
-    margin:  auto;
-    padding: 0 25px
-}
+/* .container {
+    display: grid;
+    /* width: 1350px; */
+
+    .img{
+        margin-right: 25px;
+    }
