--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,24 +1,20 @@
-.section {
-    width: 1440px;
-    height: auto;
-}
 
 .container {
-    min-width: max-content;
-    max-width: 1350px;
-    width: 100%;
+    /* max-width: 1920px; */
+    /* width: 100%; */
     margin: 0 auto;
-} 
+    padding: 0 0.5rem;
+}
 
- .banner {
-    width: 99vw;
-    margin: 0 auto;
+.banner {
+    width: 100%;
+    margin: 0 auto; 
 }
 
 
-
-/* @media screen and (max-width: 1360px){
-    max-width: 1360px;
+/* 
+@media screen and (max-width: 1360px){
+    max-width 1360px;
     width: 100%;
 
 } */
