--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,43 +1,29 @@
-.header {
+.container {
     display: flex;
     width: 100%;
     background-color: #222;
-    max-width: 1898px;
-    margin: 0 auto;
-    padding: 0 2px;
-    /* display: flex;
-    width: 100%;
-    background-color: #222;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 25px;
-    justify-content: center; */
-
-    /* display: flex;
-    width: 100%;
-    background-color: #222;
-    max-width: 1898px;
-    margin: 0 auto;
-    padding: 0 2px;
-    flex-direction: column;
-    align-items: flex-end; */
+    padding-top: 29px ;
+    padding-bottom: 29px ;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.headerForm {
-    text-align: center;
-    font-size: 87px;
-    color: #FFFAFA;
-    margin-top: -40px;
+.navHome {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .linkPrincipal {
     display: flex;
-    justify-content: space-between;
-    width: 49vw;
-    margin: 0 auto;
     text-decoration: none;
-    font-style: oblique;
-    font-weight: bolder;
+    max-width: 1125px;
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 0 0 160px;
 }
 
 .linkPrincipal a {
@@ -47,20 +33,3 @@
     text-decoration: none;
     font-size: 22px;
 }
-
-.navHome {
-    display: flex;
-    width: 1350px;
-    margin: 5px auto;
-    flex-direction: row;
-    padding: 0 5px;
-    margin-left: 181px;
-}
-
-/* .container {
-    display: grid;
-    /* width: 1350px; */
-
-    .img{
-        margin-right: 25px;
-    }
