--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -1,11 +1,6 @@
-.main {
-    height: 100vh;
-    font-style: oblique;
-    text-align: center;
-    height: 116px;
-}
 
-.main h1 {
+
+.cabecalho h1 {
     text-align: center;
     color: #222;
     font-style: oblique;
@@ -17,57 +12,27 @@
 .cabecalho h2 {
     font-style: oblique;
     font-weight: bold;
-    margin-top: 25px;
-}
-
-.checkbox{
-    margin-right: 390px;
-}
-
-.cabecalho h3 {
-    font-style: oblique;
-    font-weight: bold;
-    margin-top: 25px;
-}
-
-.cabecalho h4 {
-    font-style: oblique;
-    font-weight: bold;
-    margin-top: 25px;
-}
-
-.roupas { 
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    font-style: oblique;
-    font-weight: bold;
-    margin-bottom: 0px;
-    height: 33px;
-    margin-left: 310px;
-}
-
-.roupas input {
-    margin-left: 15px;
+    color: aliceblue;
+    padding: 1rem;
+    margin-top: 35px;
+    width: 100%;
+    background-color: #222;
 }
 
 .cardsMasculina {
-    max-width: 1440px;
-    width: 100%;
-    margin: 15px auto;
+    width: 1379px;
+    margin: 0 auto;
     display: flex;
-    padding: 0.1rem;
-    font-size: 1.5rem;
     font-weight: bolder;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.cardsMasculina img{
-    width: 350px;
+.card img {
+    width: 100%;
     height: 350px;
-    margin-top: 10px;
+    margin-top: -1px;
+    border-radius: 0.9rem 0.9rem 0 0;
 }
 
 .card {
@@ -78,9 +43,6 @@
     margin-top: 30px;
 }
 
-.card img {
-    width: 100%;
-    height: 350px;
-    margin-top: -1px;
-    border-radius: 0.9rem 0.9rem 0 0;
+.card p{
+    text-transform: capitalize;
 }
