--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,17 @@
 html,
 body {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #FFFAFA;
     
 }
 
-.container {
-    max-width: 1440px;
+/* .container {
+    max-width: 1915px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 .5rem;
     background: lightgrey;
-}
+} */
