--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -1,26 +1,16 @@
 .container {
-    border: 0.1rem solid #dedede;
-    background-color: #ffffff;
-    border-radius: 0.3rem;
-    box-shadow: rgb(0 0 0 / 20%) 0px 2px 6px;
-    width: 23%;
-    height: 380px;
-    border-radius: 11rem;
-}
-
-.container {
     display: flex;
     justify-content: space-between;
-    justify-content: center;
-    border-radius: 1rem;
+    width: 100%;
+    align-items: center;
+    margin-top: 30px;
 }
 
-.imagens p {
-    margin-top: -77px;
-    color: #fff;
-    background: #000;
-    opacity: 0.8;
-    padding-bottom: 9px;
+.imagens  {
+    width: 400px;
+    height: 380px;
+    margin-top: 0;
+    border-radius: 1rem;
 }
 
 
