--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -10,13 +10,15 @@
 }
 
 .cabecalho h2 {
+    background-image: url('../../../public/bg-titulo.png');
+    padding: 5px 0 10px 10px;
     font-style: oblique;
     font-weight: bold;
-    color: aliceblue;
-    padding: 1rem;
+    color: #FFF;
     margin-top: 35px;
-    width: 100%;
-    background-color: #222;
+    width: 50%;
+    background-repeat: no-repeat;
+    text-transform: uppercase;
 }
 
 .cardsMasculina {
