--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,26 +1,21 @@
 .cards {
-    max-width: 1350px;
     width: 100%;
-    margin: 0 auto;
-    font-size: 1.5rem;
-    text-align: center;
+    height: auto;
+    
+}
+
+ .cards_1 {
+    display: flex;
+    width: 100%;
 } 
 
-.cards_1 {
+/* .cards_2 {
     display: flex;
     justify-content: space-between;
     width: 100%;
     align-items: center;
     margin-top: 30px;
-}
-
-.cards_2 {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    margin-top: 30px;
-}
+}  */
 
 .cards img {
     width: 100%;
@@ -28,4 +23,4 @@
     margin-top: 0;
     border-radius: 1rem;
     
-}
+} 
