--- a/src/components/BoxCardFeminino/styles.module.css
+++ b/src/components/BoxCardFeminino/styles.module.css
@@ -1,5 +1,28 @@
-.imagem {
+.cards {
+    Width: 100%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    font-weight: bolder;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.imagem {
+    height: 10px;
+}
+
+.cards button {
+    position: absolute;
+    border: 0;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    color: aliceblue;
+    background-color: #222;
+    cursor: pointer;
+    font-weight: bold;
+    margin: -37px 109px;
+    font-style: oblique;
 
 }
