--- a/src/components/BoxCardMasculino/styles.module.css
+++ b/src/components/BoxCardMasculino/styles.module.css
@@ -1,10 +1,28 @@
-.imagem {
+.cards {
+    Width: 100%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    font-size: 1.5rem;
     font-weight: bolder;
-    margin-top: 38px;
+    justify-content: space-between;
+    flex-wrap: wrap;
     text-align: center;
-    width: 100%;
+    margin-top: 30px;
+}
+
+.imagem {
+    height: 10px;
+}
+
+.cards button {
+    position: absolute;
+    border: 0;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    color: aliceblue;
+    background-color: #222;
+    cursor: pointer;
+    font-weight: bold;
+    margin: -37px 109px;
+    font-style: oblique;
+
 }
