--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,26 +1,11 @@
-.cards {
-    width: 100%;
-    height: auto;
-    
-}
-
- .cards_1 {
-    display: flex;
-    width: 100%;
-} 
-
-/* .cards_2 {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    margin-top: 30px;
-}  */
-
 .cards img {
     width: 100%;
     height: 380px;
     margin-top: 0;
     border-radius: 1rem;
     
-} 
+}
+.cards h1 { 
+    text-align: center;
+    margin-top: 30px;
+}
