--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -7,13 +7,13 @@
     text-align: center;
     font-style: oblique;
     background-color: #222;
-    margin-top: 225px;
+    margin-top: 218px;
 }
 
 .rodape {
     display: flex;
     height: 211px;
-    width: 825px;
+    width: 1350PX;
     justify-content: space-between;
     align-items: center;
 }
@@ -42,32 +42,20 @@
     font-weight: bold;
 }
 
-.redesSociais {
-    display: flex;
-    margin-top: 27px;
-    height: 211px;
-    align-content: flex-start;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-right: 58px;
-}
-
 .h2 {
     margin-top: 35px;
     text-align: end;
 }
 
 .links {
-    height: 10px;
-    display: flex;
-    margin: 25px 8px;
-    z-index: 0;
+    line-height: 0;
+    text-align-last: start;
+    margin-bottom: 43px;
 }
 
 .links a {
     height: 10px;
     margin: 25px 8px;
-    z-index: 0;
     display: contents;
 }
 
