--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -5,18 +5,19 @@
 }
 
 .banner {
-    /* width: 100%;
-    margin: 0 auto;  */
-    width: 1899px;
+    width: 2385px;
     margin: 0 auto;
+    min-width: -webkit-min-content;
+    min-width: -moz-min-content;
     min-width: min-content;
-    margin-left: -273px;
+    margin-left: -529px;
 }
 
 
-/* 
-@media screen and (max-width: 1360px){
-    max-width 1360px;
-    width: 100%;
-
+    /* width: 100%;
+    margin: 0 auto;  */
+    /* width: 1920px;
+    margin: 0 auto;
+    min-width: min-content;
+    margin-left: -273px;
 } */
