--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,11 @@ body {
     background-color: #FFFAFA;
     
 }
+
+.container {
+    max-width: 1915px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 .5rem;
+    background: lightgrey;
+}
