--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -4,11 +4,19 @@
     border-radius: 1rem;
     box-shadow: rgb(0 0 0 / 20%) 0px 0px 2px 2px;
     margin-top: 30px;
+    width: 474px;
+    height: auto;
+    border-radius: 1rem;
+    box-shadow: rgb(0 0 0 / 20%) 0px 0px 2px 2px;
+    margin-top: 40px;
+    padding-bottom: 20px;
 }
 
 .container img {
+    width: 100%;
     height: 350px;
-    border-radius: 1rem 1rem 0rem 0rem;
+    margin-top: -1px;
+    border-radius: 0.9rem 0.9rem 0 0;
 }
 .container p {
     font-weight: bold;
@@ -16,4 +24,14 @@
     margin: 0;
     line-height: 30px;
     font-style: oblique;
+    text-align: center;
+}
+
+.atributos {
+    width: 100%;
+    text-align: center;
+    box-shadow: rgb(0 0 0 / 20%) 0px 0px 2px 2px;
+    border-radius: 0.9rem;
+    margin-top: 40px;
+    padding-bottom: 20px;
 }
