--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 
 .cards h1 {
     text-align: center;
-    margin-top: 5px;
+    margin-top: 70px;
     background-image: url(/bg-titulo.png);
     display: flex;
     padding: 5px 0 10px 10px;
@@ -19,4 +19,8 @@
     background-repeat: no-repeat;
     text-transform: uppercase;
     margin-bottom: -50px;
+}
+
+.Banner {
+    width: 100%;
 }
