--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -31,13 +31,6 @@
     margin-bottom: 70px;
 }
 
-.card img {
-    width: 100%;
-    height: 350px;
-    margin-top: -1px;
-    border-radius: 0.9rem 0.9rem 0 0;
-}
-
 .card {
     width: 30%;
     text-align: center;
@@ -47,8 +40,24 @@
     padding-bottom: 20px;
 }
 
+.card img {
+    width: 100%;
+    height: 350px;
+    margin-top: -1px;
+    border-radius: 0.9rem 0.9rem 0 0;
+}
+
+.card p {
+    font-weight: bold;
+    font-size: 20px;
+    margin: 0;
+    line-height: 30px;
+    font-style: oblique;
+}
+
 .cabecalho label {
     margin-right: 15px;
+    font-style: oblique;
 }
 
 .cabecalho .checkbox {
