--- a/src/pages/setorMasculino/styles.module.css
+++ b/src/pages/setorMasculino/styles.module.css
@@ -19,7 +19,6 @@
     background-repeat: no-repeat;
     text-transform: uppercase;
     margin-bottom: -20px;
-
 }
 
 .cardsMasculina {
@@ -60,18 +59,16 @@
     line-height: 30px;
     font-style: oblique;
 }
+
 .cabecalho .filtro {
     width: 100%;
-    margin-left: 9px;
     z-index: 1000;
     font-weight: 900;
     text-align: end;
     margin-bottom: -66px;
     font-size: 24px;
-}
-
- .filtro .option {
-    height: auto;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .filtro select {
@@ -85,7 +82,6 @@
 }
 
 .filtro button {
-    
     height: 27px;
     font-size: 18px;
     font-weight: bold;
@@ -94,6 +90,10 @@
     background: #222;
     color: #fff;
 }
+
+.buttonfiltrar {
+    display: flex;
+    }
 
 .card button {
     border-radius: 0.5rem;
